tests/errors/syntax/missing_close_parenthesis_for_args.odl
main :: () -> void {
    add :: (a: int -> void {
        return a;
    };
};